# coreason-assay

./: .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  NOTICE  README.md  VIGNETTE.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: architecture.md  coreason_kernel_integration.md  coreason_manifest_v0.10.0_proposal.md  index.md  prd.md  requirements.md  usage.md  vignette.md
src/coreason_assay/: __init__.py  bec_manager.py  drift.py  engine.py  grader.py  interfaces.py  main.py  models.py  prompts.py  reporting.py  server.py  services.py  settings.py  simulator.py
src/coreason_assay/utils/: __init__.py  auth.py  logger.py  parsing.py
tests/: test_bec_manager.py  test_bec_manager_csv.py  test_bec_manager_exceptions.py  test_bec_manager_zip.py  test_bec_manager_zip_complex.py  test_bec_manager_zip_coverage.py  test_context_aware_grading.py  test_drift.py  test_drift_complex.py  test_drift_per_case.py  test_engine.py  test_engine_complex.py  test_faithfulness_grader.py  test_faithfulness_grader_complex.py  test_forbidden_content_grader.py  test_forbidden_content_grader_complex.py  test_grader.py  test_grader_complex.py  test_kernel_integration_complex.py  test_llm_client_protocol.py  test_main.py  test_models.py  test_models_complex.py  test_reasoning_grader.py  test_reasoning_grader_complex.py  test_refactor_edge_cases.py  test_reporting.py  test_reporting_complex.py  test_reporting_edge_cases.py  test_reporting_pass_rates.py  test_server.py  test_services.py  test_services_complex.py  test_simulator.py  test_simulator_complex.py  test_simulator_concurrency.py  test_simulator_concurrency_complex.py  test_simulator_identity.py  test_tone_grader.py  test_tone_grader_complex.py  (+1 more)
