[tool.poetry]
name = "coreason_assay"
version = "0.5.0"
description = "Quality Control (QC) laboratory of the CoReason platform"
authors = ["Gowtham A Rao <gowtham.rao@coreason.ai>"]
license = "Prosperity-3.0"
readme = "README.md"
packages = [{include = "coreason_assay", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12, <3.15"
pydantic = "^2.12.5"
jsonschema = "^4.26.0"
typer = "^0.21.1"
pydantic-settings = "^2.12.0"
fastapi = "*"
uvicorn = "*"
python-multipart = "*"
coreason-identity = "*"
anyio = "^4.12.1"
httpx = "^0.28.1"
coreason-manifest = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
ruff = "^0.14.14"
pre-commit = "^4.5.1"
pytest-cov = "^7.0.0"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.26"
pytest-mock = "^3.15.1"
types-requests = "^2.32.4.20260107"
types-setuptools = "^80.10.0.20260124"
pytest-asyncio = "^1.3.0"
mypy = "^1.19.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "coreason_assay"
version = "0.5.0"
description = "Quality Control (QC) laboratory of the CoReason platform"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Gowtham A Rao", email = "gowtham.rao@coreason.ai" },
]
license = { file = "LICENSE" }
classifiers = [
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/CoReason-AI/coreason-assay"
Repository = "https://github.com/CoReason-AI/coreason-assay"
Documentation = "https://github.com/CoReason-AI/coreason-assay"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["coreason_assay"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
warn_unused_ignores = false

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=100"
testpaths = ["tests"]

[tool.coverage.run]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]
